# get_novel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  noveler.rs
src/noveler/: czbooks.rs  hjwzw.rs  novel543.rs  piaotia.rs  qbtr.rs  uukanshu.rs
tests/czbooks/: chapter.html  chapter2.html  contents.html  contents2.html
tests/hjwzw/: chapter.html  chapter2.html  contents.html
tests/novel543/: chapter.html  contents.html
tests/piaotia/: chapter.html  chapter2.html  contents.html
tests/qbtr/: chapter.html  contents.html
tests/uukanshu/: chapter.html  chapter2.html  chapter3.html  chapter4.html  contents.html  contents2.html
