[package]
name = "get_novel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aho-corasick = "1.1"
regex = "1.10"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url = "2.5"
encoding_rs = "0.8"
chardetng = "0.1"
visdom = { version = "1.0", features = ["destroy"] }

[dev-dependencies]
mockito = "1.2"
tempdir = "0.3"
nipper = "0.1"
scraper = "0.18"
accessibility-scraper = "0.0.5"
crabquery = "0.1"
