[package]
name = "get_novel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url = "2.5"
encoding_rs = "0.8"
chardetng = "0.1"
visdom = { version = "1.0", features = ["destroy"] }

[dev-dependencies]
mockito = "1.4"
tempdir = "0.3"
nipper = "0.1"
scraper = "0.19"
accessibility-scraper = "0.0"
crabquery = "0.1"
